objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banker</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CheckOutDate__c</fullName>
        <label>Check Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckOutDistanceFromRecordMi__c</fullName>
        <label>Check Out Distance From Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is used by the &quot;Perfect Date Wizard&quot; SE tool to adjust the Due Date on a task or event.</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistanceFromRecordMi__c</fullName>
        <label>Distance from Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Interaction</label>
        <referenceTo>EngagementInteraction</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_CIB_Planned_Completion_Date__c</fullName>
        <formula>ActivityDate + FINS_CIB_Task_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Regulatory_Indicator__c</fullName>
        <formula>IF ( FINS_CIB_Regulatory__c = true, IMAGE(&quot;/resource/WarningBoxSmall&quot;, &quot;Regulation&quot;,20,20)&amp;&quot; - &quot;&amp;&quot;Regulatory Related&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Regulatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regulatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Status_Indicator__c</fullName>
        <formula>CASE( TEXT(Status),
&quot;Completed&quot;,IMAGE(&quot;/resource/CIB_AlertIcons/GreenSlide2.png&quot;, &quot;Completed&quot;, 23, 50),
&quot;In Progress&quot;,IMAGE(&quot;/resource/CIB_AlertIcons/BlueSlide.png&quot;, &quot;Not Started&quot;, 23, 50),
&quot;Waiting&quot;,IMAGE(&quot;/resource/CIB_AlertIcons/YellowSlide.png&quot;, &quot;Waiting&quot;, 23, 50),
&quot;Not Started&quot;,IMAGE(&quot;/resource/CIB_AlertIcons2/GreySlideStart.png&quot;, &quot;Not Started&quot;, 23, 50),
&quot;Overdue&quot;,IMAGE(&quot;/resource/CIB_AlertIcons/RedSlide2.png&quot;, &quot;Overdue&quot;, 23, 50),
IMAGE(&quot;/resource/CIB_AlertIcons/GreySlide.png&quot;, &quot;Deferred&quot;, 23, 50)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Task_Duration__c</fullName>
        <label>Task Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all events</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
                <value>
                    <fullName>Resource Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Expectations__c</fullName>
        <description>Notes about client&apos;s expectations</description>
        <label>Expectations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household associated with the task</description>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__NextSteps__c</fullName>
        <description>Notes about follow-up activities</description>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Objectives__c</fullName>
        <description>Notes about client&apos;s objectives</description>
        <label>Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Regarding__c</fullName>
        <description>Nature of interaction with the client</description>
        <label>Regarding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Client Retention</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Check_Out_Latitude__c</fullName>
        <description>SDO MAPS Activity Latitude field for capturing Task/Event location details 02-06-23</description>
        <label>Check Out Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Check_Out_Longitude__c</fullName>
        <description>SDO MAPS Activity Longitude field for capturing Task/Event location details 02-06-23</description>
        <label>Check Out Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Created_Latitude__c</fullName>
        <description>SDO MAPS check in/out created location field 02-02-23 AB</description>
        <label>Created Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Created_Longitude__c</fullName>
        <description>SDO MAPS check-in/out created location field 02-02-23 AB</description>
        <label>Created Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_Safety_Checklist_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used in the Safety Checklist Flow. Who: Dylan Friddle &amp; Aaron Bendickson. When: Aug 30,2021</description>
        <label>Safety Checklist Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_On_Site_Minutes__c</fullName>
        <description>Added May 2021 to support the Salesforce Maps Dashboards.</description>
        <label>Time On Site (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This custom field is required to expose the Activity Type field to reporting.  It is updated automatically by a trigger called &quot;qbranch_activity_type_update&quot;.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                    <default>true</default>
                    <label>Call</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Prep</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>db_days_ActivityDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>ActivityDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_ActivityDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>ActivityDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_CheckOutDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>CheckOutDate__c db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_EndDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>EndDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_RecurrenceStartDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>RecurrenceStartDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_ReminderDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>ReminderDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_StartDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>StartDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Base Object</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__WA_AdvRouteWaypoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Advanced Route Waypoint</description>
        <label>Maps Advanced Route Waypoint</label>
        <referenceTo>maps__AdvRouteWaypoint__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>